Ada xsd interpretation more details.

--- a/test-resources/template/ada-schema.template
+++ b/test-resources/template/ada-schema.template
@@ -1,3 +1,5 @@
-/xsd:schema                                                         -- UML
-> xsd:complexType                                                   -- Class in classes
->> @name                                                            -- name
+/xsd:schema                 -- UML
+> xsd:complexType           -- Class in classes
+>> @name                    -- name
+>> xsd:attribute            -- ClassProperty in properties
+>>> @name                   -- name
