Domain modified to reflect the template required changes. More clear now.

--- a/test-resources/template/operations.template
+++ b/test-resources/template/operations.template
@@ -4,5 +4,8 @@
 >> names_ql/defining_identifier/@def_name                           -- name
 >> visible_part_declarative_items_ql/ordinary_type_declaration      -- Class in classes
 >>> names_ql/defining_identifier/@def_name                          -- name
->>> type_declaration_view_q/record_type_definition/record_definition_q/record_definition/record_components_ql/component_declaration -- Operation in operations
+>>> ../function_declaration[]                                       -- Operation in operations
 >>>> names_ql/defining_identifier/@def_name                         -- name
+>>>> parameter_profile_ql/parameter_specification                   -- ClassParameter in parameters
+>>>>> names_ql/defining_identifier/@def_name                        -- name
+>>>>> @mode                                                         -- direction
