--- a/test-resources/template/basicAdaTemplate.template
+++ b/test-resources/template/basicAdaTemplate.template
@@ -4,7 +4,7 @@
 >> names_ql/defining_identifier/@def_name                           -- name
 >> visible_part_declarative_items_ql/ordinary_type_declaration      -- Class in classes
 >>> names_ql/defining_identifier/@def_name                          -- name
->>> type_declaration_view_q/record_type_definition/record_definition_q/record_definition/record_components_ql/component_declaration -- ClassProperty in properties
+>>> type_declaration_view_q/record_type_definition/record_definition_q/record_definition/record_components_ql/component_declaration -- Property in properties
 >>>> names_ql/defining_identifier/@def_name                         -- name
 >> visible_part_declarative_items_ql/subtype_declaration            -- Primitive in primitives
 >>> names_ql/defining_identifier/@def_name                          -- name
