--- a/test-resources/template/operations.ads.template
+++ b/test-resources/template/operations.ads.template
@@ -6,6 +6,7 @@
 >>> names_ql/defining_identifier/@def_name                          -- name
 >>> type_declaration_view_q/record_type_definition/record_definition_q/record_definition/record_components_ql/component_declaration -- Property in properties
 >>>> names_ql/defining_identifier/@def_name                         -- name
+>>>> object_declaration_view_q/component_definition/component_definition_view_q/subtype_indication/subtype_mark_q/identifier/@ref_name -- reference
 >>> ./function_declaration                                          -- Operation in operations
 >>>> names_ql/defining_identifier/@def_name                         -- name
 >>>> parameter_profile_ql/parameter_specification                   -- Parameter in parameters
