alternate LHSs are now supported for same RHS (if RHSs of the template items are in the same level and exactly same RHS)

--- a/test-resources/template/getTagFromSameLevel.template
+++ b/test-resources/template/getTagFromSameLevel.template
@@ -6,6 +6,6 @@
 >> ../operation                                 -- Operation in operations
 >> ./operation                                  -- Operation in operations
 >>> @name                                       -- name
->>>> param                                      -- Parameter in parameters
->>>>> @name                                     -- name
->>>>> classRef/@name                            -- reference
+>>> param                                      -- Parameter in parameters
+>>>> @name                                     -- name
+>>>> classRef/@name                            -- reference
